Crash after failed vertice merge #55457

Closed
opened 2018-06-12 17:01:31 +02:00 by Dalai Felinto · 4 comments

Blender Version
Broken: 2a3e7fe656 (blender2.8 HEAD)

Short description of error
Crash after failed vertice merge in factory startup.

Exact steps for others to reproduce the error

  • Factory startup
  • Edit Mesh mode (tab)
  • Press F
  • Dismiss the "failed to merge faces" warning
  • Select a vertice

SUMMARY: AddressSanitizer: heap-use-after-free //source/blender/bmesh/intern/bmesh_mesh.c:1398 in BM_mesh_elem_table_ensure
Full backtrace: P725

**Blender Version** Broken: 2a3e7fe656e7 (blender2.8 HEAD) **Short description of error** Crash after failed vertice merge in factory startup. **Exact steps for others to reproduce the error** * Factory startup * Edit Mesh mode (tab) * Press F * Dismiss the "failed to merge faces" warning * Select a vertice `SUMMARY: AddressSanitizer: heap-use-after-free //source/blender/bmesh/intern/bmesh_mesh.c:1398 in BM_mesh_elem_table_ensure` Full backtrace: [P725](https://archive.blender.org/developer/P725.txt)
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Campbell Barton was assigned by Dalai Felinto 2018-06-12 17:01:55 +02:00

This issue was referenced by 18cc8809c3

This issue was referenced by 18cc8809c34468fb748f94f637beebd58ca3b8d4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This is caused by the edit-mesh in the evaluated object being used for selection drawing.

The evaluated object has an out-dated mesh->edit_mesh.

We can:

  • Always access the original object for the edit-mesh.
  • Flush changes to the evaluated mesh (probably best).
diff --git a/source/blender/editors/space_view3d/drawobject.c b/source/blender/editors/space_view3d/drawobject.c
index 1224c284d5f..2540a0686ed 100644
--- a/source/blender/editors/space_view3d/drawobject.c
+++ b/source/blender/editors/space_view3d/drawobject.c
@@ -627,8 +627,8 @@ void draw_object_backbufsel(
        switch (ob->type) {
                case OB_MESH:
                        if (ob->mode & OB_MODE_EDIT) {
-                               Mesh *me = ob->data;
-                               BMEditMesh *em = me->edit_btmesh;
+                               Object *ob_orig = DEG_get_original_object(ob);
+                               BMEditMesh *em = BKE_editmesh_from_object(ob_orig);

                                DerivedMesh *dm = editbmesh_get_derived_cage(depsgraph, scene, ob, em, CD_MASK_BAREMESH);

This is caused by the edit-mesh in the evaluated object being used for selection drawing. The evaluated object has an out-dated `mesh->edit_mesh`. We can: - Always access the original object for the edit-mesh. - Flush changes to the evaluated mesh (probably best). ``` diff --git a/source/blender/editors/space_view3d/drawobject.c b/source/blender/editors/space_view3d/drawobject.c index 1224c284d5f..2540a0686ed 100644 --- a/source/blender/editors/space_view3d/drawobject.c +++ b/source/blender/editors/space_view3d/drawobject.c @@ -627,8 +627,8 @@ void draw_object_backbufsel( switch (ob->type) { case OB_MESH: if (ob->mode & OB_MODE_EDIT) { - Mesh *me = ob->data; - BMEditMesh *em = me->edit_btmesh; + Object *ob_orig = DEG_get_original_object(ob); + BMEditMesh *em = BKE_editmesh_from_object(ob_orig); DerivedMesh *dm = editbmesh_get_derived_cage(depsgraph, scene, ob, em, CD_MASK_BAREMESH); ```
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55457
No description provided.