Fix T55457: Crash after merge faces